chore: optimize image with layered jars, custom jre and hardened dockerignore